# lib-image-lossless-compression

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pince/image/losslesscompressiondemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/pince/image/losslesscompressiondemo/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/pince/image/losslesscompressiondemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
image-lossless-compression/: build.gradle
image-lossless-compression/src/androidTest/java/com/pince/image_lossless_compression/: ExampleInstrumentedTest.java
image-lossless-compression/src/main/: AndroidManifest.xml
image-lossless-compression/src/main/java/com/pince/image_lossless_compression/: ImageLosslessCompress.java
image-lossless-compression/src/main/jni/libjpeg_turbo/: CMakeLists.txt  com_baseproject_ndk_ImageLosslessCompress.cpp  com_baseproject_ndk_ImageLosslessCompress.h
image-lossless-compression/src/main/res/values/: strings.xml
image-lossless-compression/src/test/java/com/pince/image_lossless_compression/: ExampleUnitTest.java
